--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,1 +1,18 @@
-<footer>Page Footer</footer>
+<footer id="layout-footer">
+  <div>
+    <p>&#169; VG company All Rights Reserved</p>
+  </div>
+
+  <div>
+    <nav class="footer-nav">
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/user/profile">Profile</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</footer>
