--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,14 +1,35 @@
-#layout-footer {
+footer {
+  box-sizing: border-box;
+  width: 100%;
+  height: 4rem;
+  background-color: black;
   color: white;
-  background: grey;
-  padding: 5px 10px;
   display: flex;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: space-between;
 }
-#layout-footer a {
+#links a {
   color: white;
-  text-decoration: none;
+  margin: 2px;
 }
-#layout-footer .footer-nav ul {
-  list-style: none;
+#links a:visited,
+#links a:active,
+#links a:hover {
+  color: white;
+}
+#company-name {
+  font-size: 1.2rem;
+}
+#contact-info {
+  font-size: 1.1rem;
+}
+#contact-details {
+  display: flex;
+  flex-direction: column;
+  justify-self: flex-start;
+  justify-content: center;
+}
+#contact-details div {
+  font-size: 1rem;
+  color: grey;
 }
