--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,25 +1,57 @@
-#layout-header nav {
+header {
+  z-index: 2;
+  position: fixed;
+  top: 0;
+  box-sizing: border-box;
+  background-color: whitesmoke;
+  width: 100%;
+  margin: 0;
+  padding: 5px;
+  border-bottom: 2px solid;
+  height: 3rem;
   display: flex;
+  box-shadow: 0px 4px 10px #020024;
   justify-content: space-between;
-  padding: 0 10px;
-  background: #2196f3;
+  align-items: center;
+  top: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(90deg, #020024 0%, #322cf8 49%, #985cf9 100%);
+}
+header #page-heading a {
+  font-family: sans-serif;
+  font-size: 2 rem;
   color: white;
-  box-shadow: 1px 1px 1px 1px lightgrey;
-}
-#layout-header nav .mini-logo p {
-  margin: 5px;
-  font-size: 1.4rem;
-  font-weight: bold;
-}
-#layout-header nav .auth-links ul {
-  margin: 5% 5px;
-  display: flex;
-  list-style: none;
-}
-#layout-header nav .auth-links ul li {
-  margin-right: 10px;
-}
-#layout-header nav a {
-  color: white;
+  letter-spacing: 3px;
   text-decoration: none;
+}
+header ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+header ul li {
+  display: flex;
+  height: 1.5rem;
+  min-width: 100px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  background-color: white;
+  width: fit-content;
+  font-size: 1.2rem;
+  margin: 0px 10px;
+  padding: 5px;
+}
+header ul li a {
+  text-decoration: none;
+  color: #7a31f0;
+  border-bottom: none;
+}
+header ul li a:visited {
+  color: #7a31f0;
+}
+header ul li a:hover,
+header ul li a:active {
+  color: #afc5fd;
 }
