--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,15 +1,117 @@
-#home-container {
+body {
+  margin: 0;
+  font-family: sans-serif;
+}
+
+main {
+  margin: 0px 40px;
+  width: 100%;
   display: flex;
-  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-left: 0;
+}
+#heading-wrapper {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#heading-wrapper p {
+  text-align: center;
+  font-size: 1.5rem;
+}
+#main-components-wrapper {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 #feed-posts {
-  width: 70%;
-  padding: 10px;
+  padding: 20px;
+  border: 2px solid #020024;
+  width: 60%;
+  border-radius: 10px;
 }
-#user-friends {
-  box-sizing: border-box;
-  width: 30%;
-  height: 100%;
-  border-left: 1px solid lightgrey;
+#feed-posts h2 {
+  letter-spacing: 2px;
+  color: white;
+  text-align: center;
+}
+#form-posts {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#form-posts textarea {
+  height: 4rem;
+  width: 96%;
+  border-radius: 10px;
   padding: 10px;
+  resize: none;
+  border: none;
+  outline: none;
+}
+#form-posts textarea:active {
+  outline: none;
+}
+#submit-btn {
+  height: 30px;
+  width: 60px;
+  margin-top: 10px;
+  background-color: #020024;
+  color: white;
+  font-size: 1rem;
+  padding: 5px;
+  border-radius: 5px;
+  font-weight: 600;
+  outline: none;
+}
+#submit-btn:hover {
+  cursor: pointer;
+}
+#submit-btn:active {
+  outline: none;
+  transform: scale(0.95);
+  border: none;
+}
+.users-list-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.users-list {
+  margin: 20px;
+  padding: 20px;
+  border: 4px solid #020024;
+  border-radius: 20px;
+  background-color: #020024;
+  height: fit-content;
+  max-height: 400px;
+  overflow-y: auto;
+}
+.users-list h2 {
+  letter-spacing: 2px;
+  color: white;
+}
+.users-list p {
+  color: white;
+  padding: 4px;
+  margin: 0;
+}
+.users-list p a {
+  color: inherit;
+  text-decoration: none;
+}
+.users-list p a:active,
+.users-list p a:visited,
+.users-list p a:link {
+  color: inherit;
+}
+
+.hidden {
+  display: none;
 }
