--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,11 +1,16 @@
-<li>
-  <p>
-    <% if (locals.user && locals.user.id == comment.user.id) { %>
-    <small>
-      <a href="/comments/destroy/<%= comment.id %>">X</a>
-    </small>
-    <% } %> <%= comment.content %>
-    <br />
-    <small> <%= comment.user.name %> </small>
-  </p>
+<link rel="stylesheet" href="/css/_comment.css" />
+
+<li id="<%= comment._id %>">
+  <h4><%= comment.user.name %></h4>
+  <p class="comments-content"><%= comment.content %></p>
+  <% if (locals.user && locals.user.id == comment.user.id) { %>
+
+  <a
+    href="/comments/destroy/<%= comment.id %>"
+    class="comments-delete-btn-link"
+  >
+    <button class="comments-delete-btn">Delete</button>
+  </a>
+
+  <% } %>
 </li>
