--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,32 +1,24 @@
-<header id="layout-header">
-  <nav>
-    <div class="mini-logo">
-      <p>
-        <a href="/">Codial</a>
-      </p>
-    </div>
+<header>
+  <h1 id="page-heading"><a href="/">Codial</a></h1>
 
-    <div class="auth-links">
-      <ul>
-        <% if(locals.user) { %>
-        <li>
-          <a href="/users/profile"> <%= user.name %> </a>
-        </li>
-        <li>
-          <a href="/users/sign-out">Sign Out</a>
-        </li>
-        <% }else{ %>
+  <ul>
+    <% if(locals.user) { %>
+    <li>
+      <a href="/users/profile/<%= user.id %>"> <%= user.name %> </a>
+    </li>
+    <li>
+      <a href="/users/sign-out">Sign Out</a>
+    </li>
+    <% }else{ %>
 
-        <li>
-          <a href="/users/sign-in">Sign In</a>
-        </li>
+    <li>
+      <a href="/users/sign-in">Sign In</a>
+    </li>
 
-        <li>
-          <a href="/users/sign-up">Sign Up</a>
-        </li>
+    <li>
+      <a href="/users/sign-up">Sign Up</a>
+    </li>
 
-        <% } %>
-      </ul>
-    </div>
-  </nav>
+    <% } %>
+  </ul>
 </header>
