--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,27 +1,37 @@
 <link rel="stylesheet" href="/css/user_profile.css" />
-<h1>Codeial / Profile Page</h1>
 
-<% if(user.id == profile_user.id){ %>
-<form action="/users/update/<%= profile_user.id %>" method="POST">
-  <input
-    type="text"
-    name="name"
-    placeholder="Your Name"
-    value="<%= profile_user.name %>"
-    required
-  />
-  <input
-    type="email"
-    name="email"
-    placeholder="Your Email"
-    value="<%= profile_user.email %>"
-    required
-  />
-  <input type="submit" value="Update" />
-</form>
+<main>
+  <img src="<%= user.avatar %>" alt="<%= user.name %>" width="100" />
 
-<%}else{%>
+  <% if(locals.user && locals.user.id == profile_user.id){ %>
+  <form
+    action="/users/update/<%= profile_user.id %>"
+    enctype="multipart/form-data"
+    method="POST"
+  >
+    <input
+      type="text"
+      name="name"
+      id="users_name"
+      placeholder="Your Name"
+      value="<%= profile_user.name %>"
+      required
+    />
+    <input
+      type="email"
+      name="email"
+      id="users_email"
+      placeholder="Your Email"
+      value="<%= profile_user.email %>"
+      required
+    />
+    <input type="file" name="avatar" placeholder="Profile picture" />
+    <input type="submit" value="Update" />
+  </form>
 
-<p>Name: <%= profile_user.name %></p>
-<p>Email: <%= profile_user.email %></p>
-<%} %>
+  <%}else{%>
+
+  <p id="user-name">Name: <%= profile_user.name %></p>
+  <p id="user-email">Email: <%= profile_user.email %></p>
+  <%} %>
+</main>
