--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -7,3 +7,7 @@
     <input type="submit" value="Sign-In" />
   </form>
 </main>
+
+<p>
+  <a href="/users/auth/google">Google Sign in/Sign Up</a>
+</p>
