--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,16 +22,41 @@
         </ul>
       </div>
     </section>
-
+    <% if (locals.user) { %>
     <div class="users-list-wrapper">
-    <section class="users-list">
-      <h2>Friends</h2>
-      <% for(u of all_users) {%>
-      <p>
-        <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
-      </p>
+      <section class="users-list">
+        <h2>Friends</h2>
+        <% for( friendship of myUser.friendships) {%> <%
+        if(friendship.from_user.id == myUser.id) { %>
+        <p>
+          <a href="/users/profile/<%=friendship.to_user._id%>"
+            ><%= friendship.to_user.name %>
+          </a>
+        </p>
+        <% } else {%>
+        <p>
+          <a href="/users/profile/<%=friendship.from_user._id%>"
+            ><%= friendship.from_user.name %></a
+          >
+        </p>
+        <%}%> <%}%>
+        <!-- <% for(u of all_users) {%>
+        <p>
+          <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
+        </p>
+        <% } %> -->
+      </section>
       <% } %>
-    </section>
+      <section class="users-list">
+        <h2>ALL USER</h2>
+
+        <% for( u of all_users) {%>
+        <p>
+          <a href="/users/profile/<%=u.id%>"><%= u.name %></a>
+        </p>
+        <%}%>
+      </section>
+    </div>
   </div>
 </main>
 <script src="/js/home_posts.js"></script>
