--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <h1 id="page-heading"><a href="/">Codial</a></h1>
+  <h1 id="page-heading"><a href="/">BuzzTalk</a></h1>
 
   <ul>
     <% if(locals.user) { %>
