--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,13 +1,28 @@
+<link rel="stylesheet" href="/css/user_sign_in.css" />
 <main>
-  <h1 id="'main-heading">Sign In</h1>
+  <h1 class="main-heading">Sign In</h1>
 
-  <form action="/users/create-session" method="POST">
-    <input type="email" name="email" placeholder="Your Email" required />
-    <input type="password" name="password" placeholder="Password" required />
-    <input type="submit" value="Sign-In" />
+  <form id="signin-form" action="/users/create-session" method="POST">
+    <input
+      type="email"
+      id="users_email"
+      name="email"
+      placeholder="Your Email"
+      required
+    />
+    <input
+      type="password"
+      id="users_pass"
+      name="password"
+      placeholder="Password"
+      required
+    />
+    <input type="submit" class="submit" value="Sign-In" />
   </form>
 </main>
 
 <p>
-  <a href="/users/auth/google">Google Sign in/Sign Up</a>
+  <a class="google-signin" href="/users/auth/google"
+    ><button class="signgoo">Sign in using Google</button></a
+  >
 </p>
